# FastApi_task

./: pyproject.toml
async_tasks/: asyncio_task.py  multiprocessing_task.py  multithreading_task.py
fastapi_task/: alembic.ini  database.py  main.py  sql_app.db
fastapi_task/migrations/: env.py
fastapi_task/migrations/versions/: 2023_11_24_1724-7bad3251522d_migration_1.py
fastapi_task/task/: models.py  orm.py  routers.py  schemas.py  utils.py
